--- a/hieradata/node/puppet1.maludy.home.yaml
+++ b/hieradata/node/puppet1.maludy.home.yaml
@@ -1,2 +1,6 @@
 ---
+# SNMP
 encore::snmp::contact: abc123@maludy.home
+
+# MOTD
+encore::motd:content: "This server, ${::fqdn}, is managed by Puppet"
