--- a/hieradata/base.yaml
+++ b/hieradata/base.yaml
@@ -8,6 +8,7 @@ encore::ntp::servers:
   - 0.pool.ntp.org
   - 1.pool.ntp.org
   - 2.pool.ntp.org
+  - 3.pool.ntp.org
 
 # SNMP
 encore::snmp::contact: root@maludy.home
