Updating selinux util packages

--- a/config/master/puppet.conf
+++ b/config/master/puppet.conf
@@ -63,8 +63,8 @@
   report = true
   ignoreschedules = true
   daemon = false
-  ca_server = puppetmaster.maludy.home
-  server = puppetmaster.maludy.home
+  ca_server = localhost
+  server = localhost
   environment = production
 
   # Where puppetd caches the local configuration.  An
